# LittleLemon

./: default.sqlite3  littlelemon.sqlite3  pyproject.toml
LittleLemon/: forms.py  models.py  settings.py  urls.py  views.py
LittleLemon/migrations/: 0001_initial.py  0002_delete_booking.py
LittleLemonAPI/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
LittleLemonAPI/migrations/: 0001_initial.py  0002_rename_delivery_crew_order_assigned_to.py
restaurant/: forms.py  models.py  urls.py  views.py
restaurant/migrations/: 0004_rename_name_menu_title_and_more.py
restaurant/templates/: book.html  book_deprecated.html  bookings.html  index.html
restaurant/templates/partials/: _header.html
templates/: base.html  index.html  token.html
templates/rest_framework/: banner.html
