[tool.poetry]
name = "littlelemon"
version = "0.1.0"
description = "little lemon capstone project"
authors = ["Ocean"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-admin = "^2.0.2"
django-rest-framework = "^0.1.0"
django-debug-toolbar = "^4.2.0"
jwt = "^1.3.1"
django-filter = "^23.3"
simplejwt = "^2.0.1"
djangorestframework-simplejwt = "^5.3.0"
djangorestframework-yaml = "^2.0.0"
djangorestframework-xml = "^2.0.0"
djangorestframework-csv = "^3.0.1"
bleach = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
